# Terminal-Control-2

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/: AndroidManifest.xml  build.gradle  build.gradle.kts
android/res/values/: games-ids.xml  strings.xml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/tc2/: ApplicationConventionsPlugin.kt  JvmLibraryConventionsPlugin.kt  TestConventionsPlugin.kt
core/: build.gradle  build.gradle.kts
core/src/main/kotlin/com/bombbird/terminalcontrol2/: TerminalControl2.kt
core/src/main/proto/: relay.proto
core/src/test/kotlin/: ApproachTest.kt  ApproachToolsTest.kt  ClearanceStateTest.kt  CommsToolTest.kt  ControlStateToolsTest.kt  DataSystemTest.kt  EncryptionTest.kt  JsonTest.kt  MathToolsTest.kt  MetarToolsTest.kt  PhysicsToolsTest.kt  RouteTest.kt  RouteToolsTest.kt  ScreenSizeTest.kt  TestInitialisation.kt  TrafficToolsTest.kt
core/src/test/kotlin/systems/: AISystemTest.kt
discordBot/: main.py  pyproject.toml  run_uvicorn.py  tc2_multiplayer_notifier_bot.py  test_tc2_multiplayer_notifier_bot.py
ios/: build.gradle  build.gradle.kts  robovm.properties
lwjgl3/: build.gradle  build.gradle.kts
lwjgl3/src/test/kotlin/: AirportMapIORoundTripTest.kt  DataFileTest.kt  LoadSaveTest.kt  Lwjgl3StubApplication.kt  loadSaveTestSampleMeta.txt  loadSaveTestSampleMetaModified.txt  loadSaveTestSampleSave.txt  loadSaveTestSampleSaveModified.txt
relay/: build.gradle  build.gradle.kts
relay/src/test/kotlin/: RelayServerTest.kt
(+273 files in other folders)
